--- a/ovs/package.json
+++ b/ovs/package.json
@@ -39,6 +39,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@simplewebauthn/browser": "^13.1.0",
+    "@simplewebauthn/server": "^13.1.1",
+    "@simplewebauthn/typescript-types": "^8.3.4",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
